Fix card display on mobile
The cards were not showing all the text on mobile, which is a shame
because 41% of the website traffic are mobile devices. This commit makes
the card a vertical layout on small devices and updates the image size
to increase the quality. This ensures the image looks better and the
text is properly redable even on mobile devices.

--- a/html/themes/custom/av/styles/base/global.pcss
+++ b/html/themes/custom/av/styles/base/global.pcss
@@ -77,6 +77,11 @@ header {
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 2rem;
+
+    @media (max-width: 25rem) {
+      font-size: 1.2rem;
+      line-height: 1.4rem;
+    }
   }
 }
 
