--- a/html/themes/custom/av/styles/components/card.pcss
+++ b/html/themes/custom/av/styles/components/card.pcss
@@ -1,6 +1,6 @@
 .card {
   display: flex;
-  height: 12rem;
+  min-height: 12rem;
   overflow: hidden;
   border-radius: .75rem;
   box-shadow: 0 4px 12px rgb(0 0 0 / 10%), 2px 4px 0 rgb(0 0 0 / 5%);
@@ -91,4 +91,15 @@
 
 .card .metadata + h2 {
   margin-top: 1rem;
+}
+
+@media (max-width: 48rem) {
+  .card {
+    flex-direction: column;
+    height: auto;
+
+    .card-media {
+      flex-grow: 1;
+    }
+  }
 }
